[package]
name = "csc443_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
page_size = "0.6.0"
serde = { version = "1.0.190", features = ["derive"] }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[target."cfg(unix)".dependencies]
libc = "0.2.149"
