[package]
name = "csc443_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
page_size = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
xxhash-rust = { version =  "0.8.2", features = ["xxh3"] }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[target."cfg(unix)".dependencies]
libc = "0.2.149"

[[bin]]
name = "all"
path = "experiments/main.rs"